@@ -12,6 +12,7 @@ Date: 00. 00. 0000
     - Changed some mod settings to be preferences
     - Removed Performance Mode, as it no longer did anything
     - The utility dialog now automatically saves changes to your notes
+    - Improved the warning message when there is no (enabled) recipe to craft the given product
   Bugfixes:
     - Fixed the recipe dialog dimensions to be less jumpy
     - Fixed a crash that was caused by the mod assuming that the steam prototype will always exist
